修改P3字体问题 修改P6位置问题

--- a/WebContent/bootstrap/css/other.css
+++ b/WebContent/bootstrap/css/other.css
@@ -1,4 +1,4 @@
-table{max-width:100%;background-color:transparent;border-collapse:collapse;border-spacing:0}
+table{max-width:100%;background-color:transparent;border-collapse:collapse;border-spacing:0;color:#c4c4c4}
 .table{width:100%;margin-bottom:20px}.table th,.table td{padding:8px;line-height:20px;text-align:left;vertical-align:top;border-top:1px solid #555}
 .table th{font-weight:bold}
 .table thead th{vertical-align:bottom}
